[package]
name = "scrape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bat = { version = "0.24.0", default-features = false, features = ["minimal-application"] }
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = "0.3"
indicatif = "0.17"
regex = "1.10.4"
reqwest = {version = "0.12", features = ["stream"]}
scraper = "0.19"
tokio = { version = "1.37", features = ["rt"] }
url = "2.5.0"

[features]
multi= ["tokio/rt", "tokio/macros", "tokio/rt-multi-thread"]
single= ["tokio/rt"]
default = ["single"]

[profile.release]
strip = true
opt-level = "s"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
