[package]
name = "scrape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = "0.3"
indicatif = "0.17"
jsonpath-rust = "0.7"
regex = "1.11.1"
reqwest = {version = "0.12", features = ["stream"]}
scraper = "0.22"
tokio = { version = "1.43", features = ["rt"] }
url = "2.5.4"
[dependencies.bat]
version = "0.25.0"
default-features = false
features = ["minimal-application"]
optional = true

[features]
multi= ["tokio/rt", "tokio/macros", "tokio/rt-multi-thread"]
single= ["tokio/rt"]
highlighting = ["dep:bat"]
default = ["single", "highlighting"]

[profile.release]
strip = true
opt-level = "s"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
